--- a/reading.html
+++ b/reading.html
@@ -20,7 +20,7 @@
     <p>>> papers (click to get paper)</p>
     <ul>
         <li>
-            <label for="state-space-models">// <a href=" https://arxiv.org/pdf/2309.00875">Markov Model for  International Crude Oil Futures Markets</a></label>
+            <label for="state-space-models">// <a href=" https://drive.google.com/file/d/1hLZyYN-RWjijWyK-hUjcMsKUds-dFluz/view">Improving Deepfake Audio Detection</a></label>
             <input type="checkbox" id="state-space-models" name="readPapers" value="state-space-models">
         </li><br>
         <li>
