--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <p>>> I am currently working on the following topics:</p>
     <ul>
         <li>// Predictive Maintenance of Electric Vehicle Components with Optical and Quantum Enhancements</li><br>
-        <li>// Anomaly Detection System for Predictive Maintenance</li><br>
-        <li>// Working on my Research Paper publication</li><br>
+        <li>// Synthesized Audio Detection in MArathi Speech</li><br>
+        <li>// Working on my Research Paper Documentation</li><br>
     </ul>
     <hr>
 
