--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
 
     <!-- Introduction Section -->
     <hr>
-    <p>>> Currently, I am pursuing my bachelor's degree and trying to crack ML</p>
+    <p>>> Currently, I am pursuing my bachelor's degree and trying to gradient-descend my way into the vast AI/ML field.</p>
     <hr>
-    <p>>> I love deep learning, reinforcement learning sometimes, and am always looking to build cool projects on these. Ping me up on any of the below if you would like to collaborate on something!</p>
+    <p>>> I love deep learning and doing research , and am always looking to build cool projects on these. Ping me up on any of the below if you would like to collaborate on something!</p>
 
+    
     <!-- Contact Links -->
     <ul>
         <li>// <a href="https://x.com/riyytech">[@riyytech] twitter or X whatever</a></li><br>
@@ -41,10 +42,13 @@
     <hr>
 
     <!-- Current Projects -->
-    <p>>> I am currently working on the following topics:</p>
+    <p>Currently Working on
+        <span class="animated-ellipsis"></span>
+    </p>
+    
     <ul>
-        <li>// Predictive Maintenance of Electric Vehicle Components with Optical and Quantum Enhancements</li><br>
-        <li>// Synthesized Audio Detection in MArathi Speech</li><br>
+        <li>// One of my dream Project...will update about it later</li><br>
+        <li>// Synthesized Audio Detection in मराठी  Speech</li><br>
         <li>// Working on my Research Paper Documentation</li><br>
     </ul>
     <hr>
