--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>>> hello</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
     <link rel="icon" type="image/png" href="maneki-neko.png">
     <style>
         body {
@@ -15,7 +16,7 @@
     </style>
 </head>
 
-<body>
+<div>
     <!-- Theme toggle button -->
     <button class="toggle-btn" id="themeToggle"><i class="fas fa-moon"></i></button>
 
@@ -77,6 +78,7 @@
     <!-- Footer -->
     <p><b>Thanks for visiting!</b></p>
 
+    
     <!-- Theme toggle script -->
     <script src="themeToggle.js"></script>
 </body>
